# hansa

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
crates/hansa/: Cargo.toml
crates/hansa-cli/: Cargo.toml  README.md
crates/hansa-cli/src/: config.rs  main.rs
crates/hansa-cli/tests/: cli.rs
crates/hansa/benches/: context_assembly.rs  saga_build.rs  saga_score.rs
crates/hansa/src/: background.rs  cache.rs  chain.rs  context.rs  error.rs  genesis.rs  hansa.rs  head_cache.rs  hybrid_registry.rs  key.rs  keystore.rs  lib.rs  manifest.rs  member.rs  migrate.rs  registry.rs  sign.rs  tiktoken.rs
crates/hansa/src/membrane/: allocation.rs  async_query.rs  budget.rs  mod.rs  query.rs
crates/hansa/src/saga/: build.rs  mod.rs  score.rs
crates/hansa/tests/: background_refresh.rs  cross_process.rs  gates.rs  hybrid_registry.rs  manifest_membrane.rs  membrane_async.rs  membrane_deadline.rs  membrane_three_tenants.rs  multi_tenant_membrane.rs  registry_basic.rs
docs/: deployment.md  plugin-guide.md  threat-model.md
examples/bench-report/: Cargo.toml
examples/bench-report/src/: main.rs
examples/hansa-agent/: Cargo.toml
examples/hansa-agent/src/: main.rs
examples/hybrid-demo/: Cargo.toml
examples/hybrid-demo/src/: main.rs
examples/three-agents/: Cargo.toml
examples/three-agents/src/: knowledge.rs  main.rs
