[workspace]
members = [
    "crates/hansa",
    "crates/hansa-cli",
    "examples/three-agents",
    "examples/hansa-agent",
    "examples/bench-report",
    # hybrid-demo is temporarily out of the workspace: it demonstrates
    # cross-machine member merge over HTTP, which relied on the old
    # members.snap and needs reworking for the signed chain (network
    # registry work). Source kept for that rework.
    # "examples/hybrid-demo",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/skegdb/hansa"
homepage = "https://github.com/skegdb/hansa"
authors = ["skeg contributors"]

[workspace.dependencies]
skeg-rigging = "0.1.1"
skeg-rigging-skeg = "0.1.1"
skeg-rigging-net = "0.1"
skeg-rigging-net-http = "0.1"
skeg-hull = "0.1"
bytes = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
zeroize = { version = "1", features = ["zeroize_derive"] }
fs2 = "0.4"
rayon = "1"
parking_lot = "0.12"
rand = "0.9"
ed25519-dalek = { version = "2", features = ["zeroize"] }

[workspace.lints.clippy]
uninlined_format_args = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
