[package]
name = "hansa-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Command-line interface for hansa: federate agent memories without writing code."

[[bin]]
name = "hansa"
path = "src/main.rs"

[dependencies]
hansa = { path = "../hansa", version = "0.2.0" }
skeg-rigging = { workspace = true }
skeg-rigging-net = { workspace = true }
skeg-rigging-skeg = { workspace = true }
skeg-rigging-ingest = { version = "0.1.2", features = ["watch"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
toml = "0.8"
rand = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints]
workspace = true
