[package]
name = "bench-report"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
hansa = { path = "../../crates/hansa" }
skeg-rigging = { path = "../../../skeg-rigging/crates/skeg-rigging" }
skeg-rigging-skeg = { path = "../../../skeg-rigging/crates/skeg-rigging-skeg" }
skeg-rigging-net = { path = "../../../skeg-rigging-net/crates/skeg-rigging-net" }
bytes = "1"
tempfile = "3"
