[package]
name = "bench-report"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
hansa = { path = "../../crates/hansa", features = ["tiktoken"] }
skeg-rigging = { workspace = true }
skeg-rigging-skeg = { workspace = true }
skeg-rigging-net = { workspace = true }
bytes = "1"
tempfile = "3"
[features]
tokio = ["hansa/tokio"]
