[package]
name = "hansa-agent"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "hansa-agent"
path = "src/main.rs"

[dependencies]
hansa = { path = "../../crates/hansa" }
skeg-rigging = { path = "../../../skeg-rigging/crates/skeg-rigging" }
skeg-rigging-skeg = { path = "../../../skeg-rigging/crates/skeg-rigging-skeg" }
skeg-rigging-net = { path = "../../../skeg-rigging-net/crates/skeg-rigging-net" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
[features]
tokio = ["hansa/tokio"]
