[package]
name = "hansa-agent"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "hansa-agent"
path = "src/main.rs"

[dependencies]
hansa = { path = "../../crates/hansa" }
skeg-rigging = { workspace = true }
skeg-rigging-skeg = { workspace = true }
skeg-rigging-net = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
[features]
tokio = ["hansa/tokio"]
