[package]
name = "three-agents"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
hansa = { path = "../../crates/hansa" }
skeg-rigging = { workspace = true }
skeg-rigging-skeg = { workspace = true }
skeg-rigging-net = { workspace = true }
tempfile = "3"
[features]
tokio = ["hansa/tokio"]
